--- a/css/dita11/navbar.css
+++ b/css/dita11/navbar.css
@@ -27,3 +27,9 @@ ul li a:hover{
     text-decoration: underline;
     font-size: 20px;
 }
+
+#navbar{
+    display: flex;
+    justify-content: flex-end;
+   
+}
