--- a/css/dita17/detyramedia.css
+++ b/css/dita17/detyramedia.css
@@ -24,7 +24,7 @@ body {
       flex-wrap: wrap;
       
     }
-    
+}   
   @media screen and (max-width: 768px) {
       body{
         background-color: rgb(38, 0, 255);
@@ -35,6 +35,7 @@ body {
         flex-direction: column;
       }
   }
+    
   
  
 
